# Email-Management-System

./: .env  .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile_app  Dockerfile_client  Dockerfile_frontend  Dockerfile_project  Dockerfile_server  Dockerfile_tests  README.md  docker-compose.yml  docker-compose1.yml
src/: App.cpp  App.h  CMakeLists.txt
src/AndroidApp/MyEmailApp/: settings.gradle.kts
src/AndroidApp/MyEmailApp/app/: build.gradle.kts
src/AndroidApp/MyEmailApp/app/src/main/: AndroidManifest.xml
src/AndroidApp/MyEmailApp/app/src/main/res/color/: nav_item_icon_tint.xml
src/AndroidApp/MyEmailApp/gradle/: libs.versions.toml
src/AndroidApp/MyEmailApp/gradle/wrapper/: gradle-wrapper.properties
src/Client/: ClientManager.h  ClientSocket.h  client_tcp.py
src/frontend/: .env  package-lock.json  package.json
src/frontend/public/: index.html
src/frontend/src/: App.js  index.js
src/frontend/src/components/: ButtonsByType.js  ComposeModal.css  ComposeModal.js  Drafts.css  Drafts.js  LabelContainer.js  LabelSelectorButton.css  LabelSelectorButton.js  Labels.css  Login.css  Login.js  MailsView.css  MarkAsSpamButton.jsx  PrivateRoute.js  Profile.css  ProfileModal.css  ProfileModal.js  Register.js  SentMails.js  StarToggleButton.css  StarToggleButton.js  StarredMails.js  ThemeContext.js  ThemeToggle.css  ThemeToggle.js  Trash.js  UserMenu.css  UserMenu.js  Welcome.css  inbox.css  inbox.js  searchAll.js  searchBar.css  searchBar.js  searchBar1.css  searchResult.css  searchResult.js  searchResult1.js  searchResultOriginal.js  spam.js
src/frontend/src/components/services/: draftService.js  inboxService.js  sentService.js
src/frontend/src/components/utils/: errorUtils.js
src/frontend/src/context/: AuthContext.js
src/frontend/src/pages/: HomePage.css  HomePage.js  HomePage1.js  InboxPage.css  InboxPage.js  ProfilePage.js  WelcomePage.js
src/frontend/src/services/: authService.js  jwtUtils.js
src/server/: AddHashParam.cpp  AddHashParam.h  AddNewUrl.cpp  AddNewUrl.h  BitArray.cpp  BitArray.h  BloomFilter.cpp  BloomFilter.h  CheckMatchUrl.cpp  CheckMatchUrl.h  CommandTranslator.cpp  CommandTranslator.h  CommandsMenu.cpp  CommandsMenu.h  DeleteUrl.cpp  DeleteUrl.h  FileIOHandler.cpp  FileIOHandler.h  HashFunction.cpp  HashFunction.h  HashManager.cpp  HashManager.h  ICommand.h  ICommunicate.h  IHashFunction.h  IIOHandler.h  Manage_Command.cpp  Manage_Command.h  ServerApp.cpp  ServerApp.h  ServerSocket.cpp  ServerSocket.h  ThreadPool.cpp  ThreadPool.h  Url.cpp  Url.h  fromUrlToIndexes.cpp  fromUrlToIndexes.h  main.cpp  validInput.cpp  (+1 more)
src/web service/: app.js  package-lock.json  package.json
src/web service/config/: db.js
src/web service/controllers/: blacklistController.js  draftsController.js  labelsController.js  mailsController.js  mailsQueryController.js  objectsController.js  searchAllController.js  spamController.js  starredController.js  trashController.js  usersController.js
src/web service/models/: blacklistModel.js  draftsModel.js  labelsModel.js  mailsModel.js  searchAllModel.js  searchHistoryModel.js  spamModel.js  starredModel.js  trashModel.js  usersModel.js
src/web service/routes/: blacklistRoute.js  draftsRoute.js  historyRoute.js  labelsRoute.js  mailsRoutes.js  objectsRoute.js  searchAllRoute.js  searchRoute.js  spamsRoute.js  starredRoute.js  trashRoute.js  usersRoutes.js
src/web service/services/: blacklistService.js  draftService.js  labelsService.js  mailService.js  searchAllService.js  searchHistoryService.js  spamService.js  starredService.js  trashService.js  userService.js
src/web service/utils/: authUtil.js  checkUserId.js  cronJobs.js  socketClientService.js  uploadPic.js  userValidation.js
tests/: AddHashParam_test.cpp  AddNewUrlTest.cpp  AppTest.cpp  BitArray_test.cpp  BloomFilter_test.cpp  CMakeLists.txt  CheckMatchUrlTest.cpp  CommandTranslator_test.cpp  CommandsMenu_test.cpp  Delete_Url_test.cpp  FileIOHandler_test.cpp  GetInputWithAtLeastTwoNumbersTest.cpp  HashFunctionTest.cpp  HashManager_test.cpp  ManageCommandTest.cpp  Server_And_client_test.cpp  Url_test.cpp  test.cpp
(+114 files in other folders)
